[package]
name = "btree_experiment"
version = "0.1.53"
edition = "2021"
authors = ["George Barwood"]
description = "Crate implements a BTreeMap similar to std::collections::BTreeMap."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/btree_experiment"

[dependencies]
serde = { version = "1.0.197", optional=true }
smallvec = { version = "1.13.2", features = ["union"] }

[features]
serde = ["dep:serde"]
