[package]
name = "btree_experiment"
version = "0.1.70"
edition = "2021"
authors = ["George Barwood"]
description = "Crate implements a BTreeMap similar to std::collections::BTreeMap."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/btree_experiment"
include = ["/src"]

[dependencies]
arrayvec = "0.7.4"
serde = { version = "1.0.197", optional=true }

[features]
serde = ["dep:serde"]
unsafe-optim = []
