[package]
name = "btree_experiment"
version = "0.1.94"
edition = "2021"
authors = ["George Barwood"]
description = "Crate implements a BTreeMap similar to std::collections::BTreeMap."
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/btree_experiment"
include = ["/src"]

[dependencies]
arrayvec = "0.7.4"
serde = { version = "1.0.197", optional=true }

[dev-dependencies]
mimalloc = "0.1.39"
cap = "0.1.2"

[features]
serde = ["dep:serde"]
unsafe-optim = []
cap = []
